kube/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  rules:
  - host: auth.tithia.scio.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8443
  tls:
  - hosts:
    - auth.tithia.scio.services
    secretName: auth-tithia-scio-services-tls
